glFusion ChangeLog

v1.1.0
------------
- Fixed broken image references in Site Tailor Install (Eric)
- Changed hard-coded "N/A" from Admins Only menu with a language file generated neutral "-" (Eric)
- Implemented js.php / css.php to consolidate all CSS and JS (Mark)
- Forum to always use HTML filter for html posts (Mark)
- New option for static pages - include / exclude from search (Mark)
- Several RFI security improvements throughout (Mark)
- Updated Site Tailor to v2.0.0 - Ability to create multiple menus (Mark)
- Search engine enhancements (Mark)
- Comment handling enhancements (Mark)
- Auto detect block tempaltes for left and right (Mark)
- Approve draft from moderation queue fails due to CSRF hardening. (Mark)
- BB2 Update - eliminated redundant hits to vars table (Joe)
- Added $_CONF['hide_adminmenu'] (Joe)
- Added ability for plugins to control moderation queue by returning a string from plugin_itemlist_
  No other moderation functions will be called if a string is returned. (Joe)
- Separated Command and Control from Submissions page in admin (Joe)
- Removed non-english language files from install tarball (will be separate download) (Eric)
- Updated look of site footer to support a Site Tailor footer menu (Eric)
- Moved the Nouveau javascript widget files so they can be used by any theme (Eric)
- Added /custom directories to all the private/plugin/templates/ .thtml files (Eric)
- Implemented the advanced editor for Contact User and Email Story (Mark)
- FileMgmt: Fixed a bug that caused the broken file reporting to not work (Mark)
- Added logview feature to moderation screen (Mark)
- Added jhead / jpegtrans configuration options (Mark)
- Added timezone select list in configuration (Mark)
- Updated Bad Behavior2 to v2.0.23 (Mark)
- Updated look of default poll vote results. (Eric)
- Updated .sql on default install and preliminary .sql prep for mssql support. (Eric)
- Moved and updated Terms of Use and Privacy Policy so they can be theme independent. (Eric)