@@ -2,6 +2,8 @@ glFusion ChangeLog
 
 v1.1.0
 ------------
+- Fixed searching for non-installed plugins when open_basedir restrictions are in effect (GL bug #0000741)
+- Story cache does not cache date format (Joe)
 - Fixed broken image references in Site Tailor Install (Eric)
 - Changed hard-coded "N/A" from Admins Only menu with a language file generated neutral "-" (Eric)
 - Implemented js.php / css.php to consolidate all CSS and JS (Mark)
